--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -6,9 +6,8 @@
         <item name="colorControlActivated">@color/purple</item>
     </style>
 
-    <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:statusBarColor">@color/status_bar_color</item>
-        <item name="android:background">@drawable/background_splash</item>
+    <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">    
+        <item name="android:windowBackground">@drawable/splashscreen</item>
     </style>
 
 </resources>
